Perform a dummy operation when setting up feed client, to catch configuration errors